--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   },
   "scripts": {
