--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
+    "@types/node": "^18.11.18",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "mysql2": "^3.1.0",
+    "nodemon": "^2.0.20",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.28.0"
   },
   "scripts": {
     "start": "nodemon app.js"
