--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adminjs/express": "^5.1.0",
+    "@adminjs/sequelize": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.24.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "adminjs": "^6.8.3",
     "axios": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
