--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
+    "@adminjs/express": "^5.1.0",
+    "@adminjs/sequelize": "^3.0.0",
     "@types/node": "^18.11.18",
+    "adminjs": "^6.8.3",
     "bcrypt": "^5.1.0",
+    "connect-pg-simple": "^8.0.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.0",
