--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@adminjs/express": "^5.1.0",
     "@adminjs/sequelize": "^3.0.0",
+    "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.15",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.24.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "adminjs": "^6.8.3",
     "axios": "^1.2.6",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -43,5 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "devDependencies": {
+    "tailwindcss": "^3.2.6"
+  }
 }
